--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ bevy_asset_loader = "0.23.0"
 bevy_tweening = "0.13.0"
 bevy_simple_screen_boxing = "0.1.1"
 bevy_rapier2d = { version = "0.30.0", features = ["enhanced-determinism"] }
+rand = "0.9.2"
 
 [features]
 # Default to a native dev build.
