--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,44 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { version = "0.16", features = ["wayland", "dynamic_linking"] }
+bevy = { version = "0.16", default-features = false, features = [
+    # "android-game-activity",
+    # "android-game-activity",
+    # "android_shared_stdcxx",
+    "animation",
+    "bevy_asset",
+    # "bevy_audio",
+    "bevy_color",
+    "bevy_core_pipeline",
+    "bevy_gilrs",
+    "bevy_gizmos",
+    "bevy_gltf",
+    "bevy_mesh_picking_backend",
+    "bevy_pbr",
+    "bevy_picking",
+    "bevy_render",
+    "bevy_scene",
+    "bevy_sprite",
+    "bevy_sprite_picking_backend",
+    "bevy_state",
+    "bevy_text",
+    "bevy_ui",
+    "bevy_ui_picking_backend",
+    "bevy_window",
+    "bevy_winit",
+    "custom_cursor",
+    "default_font",
+    "hdr",
+    "multi_threaded",
+    "png",
+    "smaa_luts",
+    "sysinfo_plugin",
+    "tonemapping_luts",
+    # "vorbis",
+    "webgl2",
+    "x11",
+    "wayland"
+]  }
 # Compile low-severity logs out of web builds for performance.
 tracing = { version = "0.1", features = [
     "max_level_debug",
@@ -37,6 +74,8 @@ bevy_simple_screen_boxing = "0.1.1"
 bevy_rapier2d = { version = "0.30.0", features = ["debug-render-2d", "enhanced-determinism"] }
 rand = "0.9.2"
 bon = "3.6.5"
+bevy_enoki = "0.4.0"
+bevy_trauma_shake = { git = "https://github.com/piedoom/bevy_trauma_shake.git" }
 
 [features]
 # Default to a native dev build.
@@ -96,15 +135,6 @@ pedantic = "warn"
 # # Enable a small amount of optimization in the dev profile.
 [profile.dev]
 codegen-backend = "cranelift"
-# opt-level = 1
-
-# # Enable a large amount of optimization in the dev profile for dependencies.
-# [profile.dev.package."*"]
-# opt-level = 3
-
-# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
-[profile.dev.package.wgpu-types]
-debug-assertions = false
 
 [profile.release]
 # Compile the entire crate as one unit.
