--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,3 @@
-# This line needs to come before anything else in Cargo.toml
-cargo-features = ["codegen-backend"]
-
 [package]
 name = "gmtk-2025-loop-racer"
 authors = ["wyvernbw <iamwyvern511@gmail.com>"]
@@ -134,7 +131,7 @@ pedantic = "warn"
 
 # # Enable a small amount of optimization in the dev profile.
 [profile.dev]
-codegen-backend = "cranelift"
+# codegen-backend = "cranelift"
 
 [profile.release]
 # Compile the entire crate as one unit.
