--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ rand = "0.9.2"
 bon = "3.6.5"
 bevy_enoki = "0.4.0"
 bevy_trauma_shake = { git = "https://github.com/piedoom/bevy_trauma_shake.git" }
+bevy_lunex = { version = "0.4.2", features = ["wasm"] }
 
 [features]
 # Default to a native dev build.
