--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gmtk-2025-loop-racer"
+name = "blood-boomerang"
 authors = ["wyvernbw <iamwyvern511@gmail.com>"]
 version = "0.1.0"
 edition = "2024"
